# fast-api-test

./: alembic.ini  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_10_0903-ae288337a867_create_products_table.py  2024_08_10_0923-4f5f0ebeab49_create_users_table.py  2024_08_10_1058-4e45a2128047_create_posts_table.py  2024_08_10_1231-57010d0406ab_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
migrations/: env.py
models/: models.py
users/: schemas.py  views.py
